--- a/assignments/final/index.html
+++ b/assignments/final/index.html
@@ -34,7 +34,7 @@
     </header>
   <div class="sitename">
       <div class="mainphoto"></div>
-     <div class="title1">Welcome to the my website</div>
+     <div class="title1">Welcome to my website</div>
      <div class="subtitle">Featuring naomi campbell</div>
   </div>
     <main>
